@@ -1,7 +1,8 @@
 <input type="submit"
-       id="{{context.id}}" name="{{context.name}}" value="{{context.title}}"
+       id="{{context.id}}" name="{{context.name}}" value="{{context.value}}"
        {{{'class': context.klass,
           'lang': context.lang,
+          'title': context.title,
           'disable': context.disabled,
           'tabindex': context.tabindex,
           'readonly': context.readonly,
